@feelpp/feelpp disable logging from command line  - --no_log=0 enable logging for all mpi processes  - --no_log=1 enable logging only for rank 0 process  - --lo_log=2 disable logging for all processes
by default no_log is set to 1, so only rank 0 process writes to disk

--- a/contrib/glog/src/glog/logging.h.in
+++ b/contrib/glog/src/glog/logging.h.in
@@ -343,6 +343,9 @@ DECLARE_int32(logbufsecs);
 // are suppressed.
 DECLARE_int32(minloglevel);
 
+// Set whether log messages go to stderr instead of logfiles
+DECLARE_int32(no_log);
+
 // If specified, logfiles are written into this directory instead of the
 // default logging directory.
 DECLARE_string(log_dir);
