--- a/testsuite/feeldiscr/CMakeLists.txt
+++ b/testsuite/feeldiscr/CMakeLists.txt
@@ -31,3 +31,4 @@ feelpp_add_test( submesh )
 feelpp_add_test( trace )
 feelpp_add_test( vect_comp )
 feelpp_add_test( wire_basket )
+feelpp_add_test( hypercubeinterpolation )
